Project

General

Profile

Actions

Bug #52063

closed

rbd-mirror: potential hang on shutdown

Added by Mykola Golub almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
pacific,octopus
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In [1] a potential rbd-mirror hang on shutdown has been introduced, when `InstanceReplayer::start_image_replayers` is called, checks that shutdown has been requested and returns without releasing the op tracked by async_op_tracker [2]. Then on shutdown the async_op_tracker will wait forever for the op to finish.

[1] https://github.com/ceph/ceph/commit/810fdbf317df7978339df30f4bbb7f4ffca545d8
[2] https://github.com/ceph/ceph/blob/547332a629dd5663083253bfd951e32d2918a009/src/tools/rbd_mirror/InstanceReplayer.cc#L374


Related issues 2 (0 open2 closed)

Copied to rbd - Backport #52105: octopus: rbd-mirror: potential hang on shutdownResolvedIlya DryomovActions
Copied to rbd - Backport #52106: pacific: rbd-mirror: potential hang on shutdownResolvedIlya DryomovActions
Actions #1

Updated by Mykola Golub almost 3 years ago

  • Status changed from New to In Progress
  • Assignee set to Mykola Golub
Actions #2

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 42662
Actions #3

Updated by Ilya Dryomov almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #52105: octopus: rbd-mirror: potential hang on shutdown added
Actions #5

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #52106: pacific: rbd-mirror: potential hang on shutdown added
Actions #6

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF