rbd-mirror: fix potential async op tracker leak in start_image_replayers

Fixes: https://tracker.ceph.com/issues/52063
Signed-off-by: Mykola Golub <mgolub@suse.com>
(cherry picked from commit 2f83b43afc6f6864655dc5e37e4b8cfb88b4a805)